--- a/NUSGrabberGUI/Resources/en.resx
+++ b/NUSGrabberGUI/Resources/en.resx
@@ -208,7 +208,7 @@
     <value> started in emulated debug mode on </value>
   </data>
   <data name="decrypting" xml:space="preserve">
-    <value>Decrypting...</value>
+    <value>Decrypting</value>
   </data>
   <data name="decrypting_debug" xml:space="preserve">
     <value>Starting decryption.</value>
@@ -324,10 +324,10 @@
   <data name="extract_vl_debug" xml:space="preserve">
     <value>.  Extracting default versionlist.</value>
   </data>
-  <data name="failed_run" xml:space="preserve">
+  <data name="no_vs" xml:space="preserve">
     <value>Detected that NUSGrabber didn't run.  Install Visual Studio C++ (x86) and try again.</value>
   </data>
-  <data name="failed_run_debug" xml:space="preserve">
+  <data name="no_vs_debug" xml:space="preserve">
     <value>Detected that NUSGrabber didn't run.  Installation of Visual Studio C++ x86 (32-bit) is required.\nStatus Code: STATUS_INVALID_IMAGE_FORMAT</value>
   </data>
   <data name="incomplete" xml:space="preserve">
@@ -430,16 +430,16 @@
     <value>Parsing list </value>
   </data>
   <data name="parsing_list2" xml:space="preserve">
-    <value> of </value>
+    <value>of</value>
   </data>
   <data name="parsing_list2_debug" xml:space="preserve">
-    <value> of </value>
+    <value>of</value>
   </data>
   <data name="parsing_list3" xml:space="preserve">
-    <value> for </value>
+    <value>for</value>
   </data>
   <data name="parsing_list3_debug" xml:space="preserve">
-    <value> from </value>
+    <value>from</value>
   </data>
   <data name="parsing_list_debug" xml:space="preserve">
     <value>Retrieving list </value>
@@ -563,5 +563,11 @@
   </data>
   <data name="write_error_debug" xml:space="preserve">
     <value>Unable to open/create wiiu_versionlist.txt.  Skipping update.</value>
+  </data>
+  <data name="ckey_del" xml:space="preserve">
+    <value>ckey.bin is already in the folder set for decryption.  Would you like to delete it?  If not, the file will be used instead.</value>
+  </data>
+  <data name="confirm_delete" xml:space="preserve">
+    <value>Confirm Deletion</value>
   </data>
 </root>
