--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,12 @@ Changelog for NEW-NUSGrabberGUI
 TODO:
 + Added more languages (mostly from Google Translate...)
 
+0.902 beta
+- Removed the ability to rename the main .exe to "NUtSGrabberGUI.exe" or "DeezNUSGrabberGUI.exe" in order to put the program in debug mode.  Why did I let someone talk me into doing that?
+- Fixed link to dropbox in message box that appears when an update fails.
+- Fixed bug with LanguageString; the value was trimmed, but was never set back to the value again, making it useless.
+- Updated project to work with Visual Studio 2017.
+
 0.901 beta
 - Added actual language support.
 - Changed dropbox link because the public folder is no longer functional.
